--- a/results/plots/all-plots.tex
+++ b/results/plots/all-plots.tex
@@ -45,7 +45,7 @@ The following are plots of all the data obtained in an experimental comparison o
 \begin{tabular}[c]{lcrcrc}
   \toprule
   \textbf{Graph}                 & \multicolumn{1}{c}{$|V|$} & \multicolumn{1}{c}{$|E|$}  & \textbf{Avg In/Outdegree} & \textbf{Max In/Outdegree}         & \textbf{Largest SCC}   \\\midrule
-  soc-LiveJournal1 \textbf{(LJ)} & \pho 4.8M                 & \phb 68M \phb$\!\!$(86M)   & 14 (18)                   & 13.9K / \php 20K \phb (20K)       & \pho 4.8M \php (100\%) \\
+  soc-LiveJournal1 \textbf{(LJ)} & \pho 4.8M                 & \phb 68M \phb$\!\!$(86M)   & 14 (18)                   & 13.9K / \php 20K \phb (20K)       & \pho 3.8M \phb (79\%)  \\
   com-Orkut \textbf{(OR)}        & \pho 3.0M                 & \php 117M \php$\!\!$(234M) & 38 (76)                   & \pho 3.4K / \php 33K \phb (33K)   & \pho 3.0M \php (100\%) \\
   arabic-2005 \textbf{(AR)}      & 22.7M                     & \php 639M (1.11B)          & 28 (49)                   & \php 575K / 9.9K \php (575K)      & 15.1M (66.7\%)         \\
   twitter-2010 \textbf{(TW)}     & 41.6M                     & 1.46B (2.40B)              & 35 (58)                   & \php 770K / $\!$2.9M $\,\,$(2.9M) & 33.4M (80.3\%)         \\
